--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "ngImageEditor",
   "version": "0.1.0",
   "description": "This is a image editor for angular.It can cut image.",
-  "main": "public/src/ngImageEditor",
+  "main": "public/ngImageEditor",
   "keywords": [
     "image",
     "head",
     "editor",
     "capture"
   ],
-  "devDependencies":{
+  "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-open": "~0.2.0",
-    "express":"~3.2.2",
+    "express": "~3.2.2",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-express":"~1.2.1",
-    "matchdep": "~0.1.2"
+    "grunt-express": "~1.2.1",
+    "matchdep": "~0.1.2",
+    "grunt-contrib-concat": "^0.3.0"
   },
   "author": "sparrow.jang",
   "license": "MIT"
